# algorithm-trains-platform

./: Dockerfile  GPU资源管理使用指南.md  README.md  adjust-params.md  alg-need.md  alg-report.md  architecture-diagrams.md  cost_optimizer.py  dependencies.md  design.md  development-plan.md  docker-compose.yml  epoch_training_implementation.md  epoch_training_usage.md  fix_imports.py  incremental-learning-flow.md  installation-summary.md  parameter_tuner_implementation_summary.md  project-schedule-plan.md  pvc-mounting-guide.md  pvc-mounting-implementation.py  pvc-usage-simple.md  pyproject.toml  refactor-design.md  requirements.txt  start_all.sh  start_backend.py  start_backend.sh  storage-usage-examples.md  storage_providers.py  test_epoch_training.py  test_gpu_resource_integration.py  test_parameter_tuner.py  test_storage_providers.py  train_platform.db  trains_doc.md  viberante_design.md  学习率调度器详解.md  质量评估与重新预处理改造方案.md
.github/workflows/: ci-cd.yml
backend/: main.py  test_interactive_debug.py  test_interactive_tuning.py  test_quality_assessment.py  test_vibration_interactive.py  train_platform.db  trains.json
backend/algorithm_engine/: __init__.py  core.py  epoch_trainers.py  gpu_resource_integration.py  inference_service.py  model_manager.py  models.py  parameter_tuner.py  trainers.py
backend/annotation/: service.py
backend/api/: algorithm_engine.py  epoch_training.py  gpu_resource_management.py  quality_assessment.py
backend/auth_service/: routes.py
backend/doris_connector/: connection.py  feature_parser.py  query_service.py  routes.py
backend/feast_service/: manager.py  routes.py  training_set_manager.py
backend/monitor_service/: routes.py
backend/pipeline_service/: incremental_learning.py  models.py  routes.py
backend/preprocessing/: pipeline.py
backend/quality_assessment/: service.py
backend/shared/: config.py  database.py  models.py
docs/: milestone-1-report.md
feast_registry/: feature_store.yaml
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  start.sh  vue.config.js  启动说明.md
frontend/public/: index.html
frontend/src/: App.vue  main.js
gpu-resource-manager/: GPU负载方式详解.md  README.md  requirements.txt  stage3_main.py  训练平台资源管理器项目计划.md
gpu-resource-manager/examples/: stage3_usage_example.py
gpu-resource-manager/src/: __init__.py  alert_rules_generator.py  config.py  exceptions.py  gpu_adapter.py  gpu_exporter.py  gpu_hpa_controller.py  gpu_memory_guard.py  gpu_parser.py  gpu_scheduler.py  grafana_dashboard_generator.py  k8s_client.py  logger.py  monitoring_aggregator.py  stage3_integration.py  web_api.py
gpu-resource-manager/tests/: test_gpu_hpa_controller.py  test_gpu_parser.py  test_gpu_scheduler.py  test_stage3_integration.py
k8s/base/: configmap.yaml  deployment.yaml  namespace.yaml
models/: versions.json
scripts/: init-db.sql  start.sh
tests/: test_doris_connector.py
(+46 files in other folders)
